ignore altair nbval output

--- a/notebooks/fit_RBD.ipynb
+++ b/notebooks/fit_RBD.ipynb
@@ -271,61 +271,61 @@
      "output_type": "stream",
      "text": [
       "# First fitting site-level model.\n",
-      "# Starting optimization of 522 parameters at Mon Jun 27 14:30:39 2022.\n",
+      "# Starting optimization of 522 parameters at Mon Jun 27 15:20:07 2022.\n",
       "         step     time_sec         loss     fit_loss   reg_escape   reg_spread reg_activity\n",
-      "            0     0.038764       9392.9       9386.6      0.59403            0       5.7092\n",
-      "          100       3.7233       1388.1       1375.8       6.7496            0       5.5503\n",
-      "          200       7.0377       1367.8       1354.3       7.9382            0       5.6055\n",
-      "          300       10.531       1356.9       1342.1       9.1962            0       5.6172\n",
-      "          400       13.992       1352.1       1336.4       10.092            0       5.6286\n",
-      "          500       17.249       1347.1       1330.4       11.155            0       5.5935\n",
-      "          600       20.502       1345.5       1328.3       11.545            0       5.5962\n",
-      "          700       23.689         1344       1326.5       11.894            0       5.6011\n",
-      "          800       26.945       1343.4       1325.7       12.109            0       5.5978\n",
-      "          900       30.409       1342.7       1324.7       12.388            0       5.5988\n",
-      "         1000       33.721       1342.4       1324.2       12.516            0       5.6058\n",
-      "         1100       36.916       1342.1       1323.7       12.811            0       5.6077\n",
-      "         1200       40.138       1341.6       1322.8       13.224            0       5.6099\n",
-      "         1300       43.454       1341.4       1322.5        13.27            0       5.6106\n",
-      "         1400       46.669       1341.2       1322.2        13.36            0       5.6088\n",
-      "         1500       50.012         1341         1322       13.399            0        5.609\n",
-      "         1512       50.364         1341         1322       13.401            0       5.6096\n",
-      "# Successfully finished at Mon Jun 27 14:31:30 2022.\n",
-      "# Starting optimization of 5799 parameters at Mon Jun 27 14:31:30 2022.\n",
+      "            0     0.095365       9392.9       9386.6      0.59403            0       5.7092\n",
+      "          100       3.4706       1388.1       1375.8       6.7496            0       5.5503\n",
+      "          200       6.6884       1367.8       1354.3       7.9382            0       5.6055\n",
+      "          300       10.057       1356.9       1342.1       9.1962            0       5.6172\n",
+      "          400       13.312       1352.1       1336.4       10.092            0       5.6286\n",
+      "          500       16.611       1347.1       1330.4       11.155            0       5.5935\n",
+      "          600       19.896       1345.5       1328.3       11.545            0       5.5962\n",
+      "          700       23.209         1344       1326.5       11.894            0       5.6011\n",
+      "          800       26.484       1343.4       1325.7       12.109            0       5.5978\n",
+      "          900       29.924       1342.7       1324.7       12.388            0       5.5988\n",
+      "         1000       33.135       1342.4       1324.2       12.516            0       5.6058\n",
+      "         1100       36.305       1342.1       1323.7       12.811            0       5.6077\n",
+      "         1200       39.488       1341.6       1322.8       13.224            0       5.6099\n",
+      "         1300       42.781       1341.4       1322.5        13.27            0       5.6106\n",
+      "         1400       45.957       1341.2       1322.2        13.36            0       5.6088\n",
+      "         1500       49.251         1341         1322       13.399            0        5.609\n",
+      "         1512       49.598         1341         1322       13.401            0       5.6096\n",
+      "# Successfully finished at Mon Jun 27 15:20:57 2022.\n",
+      "# Starting optimization of 5799 parameters at Mon Jun 27 15:20:57 2022.\n",
       "         step     time_sec         loss     fit_loss   reg_escape   reg_spread reg_activity\n",
-      "            0     0.058909       1892.8       1721.7       165.53   1.6598e-29       5.6096\n",
-      "          100       8.4385       1089.8       908.41        163.1       12.715       5.5948\n",
-      "          200       15.507         1072       892.14       158.06       16.186       5.5742\n",
-      "          300       22.613       1046.6       888.93       130.77       21.324       5.5595\n",
-      "          400        29.48       1015.2       878.27       110.26       21.117       5.5249\n",
-      "          500       36.867       1000.7       874.68       99.944       20.543       5.5231\n",
-      "          600       43.605        984.1       872.93       85.536       20.101       5.5342\n",
-      "          700       50.657       974.28       867.72       80.795       20.216       5.5481\n",
-      "          800       57.624       968.16       862.75       79.088       20.779       5.5483\n",
-      "          900       64.576       963.41       857.57       78.532       21.754       5.5529\n",
-      "         1000        71.44        960.5       853.84       78.532       22.577       5.5529\n",
-      "         1100        78.33       955.82       846.65       79.402       24.205       5.5619\n",
-      "         1200       85.459        950.9       839.02       80.789       25.524       5.5623\n",
-      "         1300       92.543       945.04       829.08       83.002       27.393       5.5686\n",
-      "         1400       100.08       941.83       823.42       84.468       28.373       5.5713\n",
-      "         1500        107.1       938.93       816.89        86.62       29.864       5.5561\n",
-      "         1600       114.25       935.66       810.55       88.594       30.975        5.539\n",
-      "         1700       121.43       930.95       800.89       91.957       32.614       5.4907\n",
-      "         1800       128.54       923.03       787.95       95.134       34.539       5.4092\n",
-      "         1900        135.4        912.8       773.93       98.004       35.507       5.3582\n",
-      "         2000       142.37       903.57       762.88       99.704       35.328       5.6599\n",
-      "         2100       149.13       896.74       753.45       101.65       35.812       5.8218\n",
-      "         2200       156.24       893.76       750.91       101.81       35.167       5.8695\n",
-      "         2300       163.41       892.44       749.44       102.18       34.914       5.8995\n",
-      "         2400       170.61       892.07       748.95       102.39       34.819        5.911\n",
-      "         2500       177.61       891.79        748.6       102.51       34.757       5.9211\n",
-      "         2600       184.64       891.62       748.47       102.55       34.677       5.9266\n",
-      "         2700       191.56       890.67       747.57       102.54       34.629       5.9282\n",
-      "         2800        198.5       889.51        746.4       102.59        34.59       5.9308\n",
-      "         2900       205.17       889.15       746.04       102.61       34.565       5.9406\n",
-      "         3000        212.1       889.05       745.89       102.67       34.542       5.9442\n",
-      "         3021       213.45       889.04       745.87       102.67       34.545       5.9439\n",
-      "# Successfully finished at Mon Jun 27 14:35:03 2022.\n"
+      "            0      0.16345       1892.8       1721.7       165.53   1.6598e-29       5.6096\n",
+      "          100       7.2807       1089.8       908.41        163.1       12.715       5.5948\n",
+      "          200       14.136         1072       892.14       158.06       16.186       5.5742\n",
+      "          300       20.976       1046.6       888.93       130.77       21.324       5.5595\n",
+      "          400       27.625       1015.2       878.27       110.26       21.117       5.5249\n",
+      "          500       34.961       1000.7       874.68       99.944       20.543       5.5231\n",
+      "          600       41.815        984.1       872.93       85.536       20.101       5.5342\n",
+      "          700       48.593       974.28       867.72       80.795       20.216       5.5481\n",
+      "          800       55.187       968.16       862.75       79.088       20.779       5.5483\n",
+      "          900       62.215       963.41       857.57       78.532       21.754       5.5529\n",
+      "         1000       68.878        960.5       853.84       78.532       22.577       5.5529\n",
+      "         1100       75.501       955.82       846.65       79.402       24.205       5.5619\n",
+      "         1200       82.335        950.9       839.02       80.789       25.524       5.5623\n",
+      "         1300       89.268       945.04       829.08       83.002       27.393       5.5686\n",
+      "         1400       96.109       941.83       823.42       84.468       28.373       5.5713\n",
+      "         1500       102.87       938.93       816.89        86.62       29.864       5.5561\n",
+      "         1600       109.39       935.66       810.55       88.594       30.975        5.539\n",
+      "         1700       116.29       930.95       800.89       91.957       32.614       5.4907\n",
+      "         1800       123.02       923.03       787.95       95.134       34.539       5.4092\n",
+      "         1900       129.68        912.8       773.93       98.004       35.507       5.3582\n",
+      "         2000       136.48       903.57       762.88       99.704       35.328       5.6599\n",
+      "         2100       143.05       896.74       753.45       101.65       35.812       5.8218\n",
+      "         2200       149.74       893.76       750.91       101.81       35.167       5.8695\n",
+      "         2300       156.78       892.44       749.44       102.18       34.914       5.8995\n",
+      "         2400       163.58       892.07       748.95       102.39       34.819        5.911\n",
+      "         2500       170.14       891.79        748.6       102.51       34.757       5.9211\n",
+      "         2600       176.75       891.62       748.47       102.55       34.677       5.9266\n",
+      "         2700       183.37       890.67       747.57       102.54       34.629       5.9282\n",
+      "         2800       190.44       889.51        746.4       102.59        34.59       5.9308\n",
+      "         2900       196.96       889.15       746.04       102.61       34.565       5.9406\n",
+      "         3000       203.61       889.05       745.89       102.67       34.542       5.9442\n",
+      "         3021       204.91       889.04       745.87       102.67       34.545       5.9439\n",
+      "# Successfully finished at Mon Jun 27 15:24:22 2022.\n"
      ]
     }
    ],
@@ -354,13 +354,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-0a0808dd7040406b85fcc8e77e6ea0a7\"></div>\n",
+       "<div id=\"altair-viz-17ef680505cd4e0aa0a138ef74cc4a23\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-0a0808dd7040406b85fcc8e77e6ea0a7\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-0a0808dd7040406b85fcc8e77e6ea0a7\");\n",
+       "    if (outputDiv.id !== \"altair-viz-17ef680505cd4e0aa0a138ef74cc4a23\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-17ef680505cd4e0aa0a138ef74cc4a23\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -433,13 +433,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-74cce0e17a5d46869b468a42045e9d76\"></div>\n",
+       "<div id=\"altair-viz-9ac2379e99934f669199b80ba6c0a552\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-74cce0e17a5d46869b468a42045e9d76\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-74cce0e17a5d46869b468a42045e9d76\");\n",
+       "    if (outputDiv.id !== \"altair-viz-9ac2379e99934f669199b80ba6c0a552\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-9ac2379e99934f669199b80ba6c0a552\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -498,6 +498,8 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "\n",
     "import altair as alt\n",
     "\n",
     "true_activities = pd.read_csv(\"RBD_activity_wt_df.csv\")\n",
@@ -551,13 +553,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-935c5409073f4dbe8007cdded5456f6e\"></div>\n",
+       "<div id=\"altair-viz-a2464156689d4d99befff810ffea71d2\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-935c5409073f4dbe8007cdded5456f6e\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-935c5409073f4dbe8007cdded5456f6e\");\n",
+       "    if (outputDiv.id !== \"altair-viz-a2464156689d4d99befff810ffea71d2\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-a2464156689d4d99befff810ffea71d2\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -632,13 +634,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-9b3e2c46aac74631b665481df7070548\"></div>\n",
+       "<div id=\"altair-viz-f06bcd77437d4a37910fd007cd8d9e4e\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-9b3e2c46aac74631b665481df7070548\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-9b3e2c46aac74631b665481df7070548\");\n",
+       "    if (outputDiv.id !== \"altair-viz-f06bcd77437d4a37910fd007cd8d9e4e\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-f06bcd77437d4a37910fd007cd8d9e4e\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -1010,13 +1012,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-c20580a02e73421da941c37bd2c9a3a9\"></div>\n",
+       "<div id=\"altair-viz-63cd7c4f5c39463e8d56510ef3e8a106\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-c20580a02e73421da941c37bd2c9a3a9\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-c20580a02e73421da941c37bd2c9a3a9\");\n",
+       "    if (outputDiv.id !== \"altair-viz-63cd7c4f5c39463e8d56510ef3e8a106\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-63cd7c4f5c39463e8d56510ef3e8a106\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
