--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -20,12 +20,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "7f2bd96d-b693-4a82-856c-edf6a85ec89a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-08T23:45:04.619019Z",
+     "iopub.status.busy": "2022-07-08T23:45:04.618636Z",
+     "iopub.status.idle": "2022-07-08T23:45:06.190821Z",
+     "shell.execute_reply": "2022-07-08T23:45:06.189451Z",
+     "shell.execute_reply.started": "2022-07-08T23:45:04.618916Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from polyclonal import Polyclonal, PolyclonalCollection\n",
-    "import polyclonal.polyclonal_collection as boot\n",
+    "import polyclonal.polyclonal_collection\n",
     "import polyclonal.plot\n",
     "import numpy as np"
    ]
@@ -45,7 +53,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "a212ce8e-b374-4cbb-9bd1-e6543972b4e6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-08T23:45:06.196439Z",
+     "iopub.status.busy": "2022-07-08T23:45:06.195880Z",
+     "iopub.status.idle": "2022-07-08T23:45:06.419878Z",
+     "shell.execute_reply": "2022-07-08T23:45:06.418996Z",
+     "shell.execute_reply.started": "2022-07-08T23:45:06.196394Z"
+    }
+   },
    "outputs": [],
    "source": [
     "activity_wt_df = pd.DataFrame({\"epitope\": [\"1\", \"2\"], \"activity\": [2.0, 1.0]})\n",
@@ -118,10 +134,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "a92c97a0-6447-4655-bdd6-49301f98f11b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-08T23:45:06.427103Z",
+     "iopub.status.busy": "2022-07-08T23:45:06.426686Z",
+     "iopub.status.idle": "2022-07-08T23:45:06.450128Z",
+     "shell.execute_reply": "2022-07-08T23:45:06.449310Z",
+     "shell.execute_reply.started": "2022-07-08T23:45:06.427070Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "boot_df = boot.create_bootstrap_sample(data_to_fit)\n",
+    "boot_df = polyclonal.polyclonal_collection.create_bootstrap_sample(data_to_fit)\n",
     "\n",
     "# Make sure we got an appropriate number of samples\n",
     "assert len(boot_df) == len(data_to_fit)\n",
@@ -146,6 +170,13 @@
    "execution_count": 4,
    "id": "04a1937a-9241-4f24-91c5-b5513e042002",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-08T23:45:06.453281Z",
+     "iopub.status.busy": "2022-07-08T23:45:06.453128Z",
+     "iopub.status.idle": "2022-07-08T23:45:06.657253Z",
+     "shell.execute_reply": "2022-07-08T23:45:06.656296Z",
+     "shell.execute_reply.started": "2022-07-08T23:45:06.453261Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -181,6 +212,13 @@
    "execution_count": 5,
    "id": "3ce1356d-9c5d-4b83-85d1-c2c2cdd0b8fb",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-08T23:45:06.661107Z",
+     "iopub.status.busy": "2022-07-08T23:45:06.660839Z",
+     "iopub.status.idle": "2022-07-08T23:45:06.796853Z",
+     "shell.execute_reply": "2022-07-08T23:45:06.795947Z",
+     "shell.execute_reply.started": "2022-07-08T23:45:06.661078Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -198,7 +236,15 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "781ad89f-9e61-4708-81d8-91fc89f2ed25",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-08T23:45:06.800768Z",
+     "iopub.status.busy": "2022-07-08T23:45:06.800511Z",
+     "iopub.status.idle": "2022-07-08T23:45:06.932482Z",
+     "shell.execute_reply": "2022-07-08T23:45:06.931402Z",
+     "shell.execute_reply.started": "2022-07-08T23:45:06.800740Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# What if we use the same seed with multiple threads?\n",
@@ -222,22 +268,34 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "c6185dc5-6d1a-4975-92b2-5cd7fd6c6b58",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-08T23:45:06.938032Z",
+     "iopub.status.busy": "2022-07-08T23:45:06.937651Z",
+     "iopub.status.idle": "2022-07-08T23:45:07.382243Z",
+     "shell.execute_reply": "2022-07-08T23:45:07.381358Z",
+     "shell.execute_reply.started": "2022-07-08T23:45:06.937987Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "# Test to ensure that parameters change during fitting.\n",
-    "for model in pc.models:\n",
-    "    old_params = model._params\n",
-    "    boot._fit_polyclonal_model_static(model, fit_site_level_first=False)\n",
-    "    # Did the params change?\n",
-    "    assert not np.array_equal(model._params, old_params)"
+    "n_fit, n_failed, _ = polyclonal.polyclonal_collection.fit_models(pc.models, n_threads=2)\n",
+    "assert n_fit == 5 and n_failed == 0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "id": "191a9185-f1d3-4271-8116-fd0a47b788ba",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-08T23:45:07.386081Z",
+     "iopub.status.busy": "2022-07-08T23:45:07.385789Z",
+     "iopub.status.idle": "2022-07-08T23:45:08.048135Z",
+     "shell.execute_reply": "2022-07-08T23:45:08.046709Z",
+     "shell.execute_reply.started": "2022-07-08T23:45:07.386050Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -267,7 +325,15 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "1b73d334-a4f0-4dc6-b636-6c179930dd74",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-08T23:45:08.053740Z",
+     "iopub.status.busy": "2022-07-08T23:45:08.053319Z",
+     "iopub.status.idle": "2022-07-08T23:45:08.159759Z",
+     "shell.execute_reply": "2022-07-08T23:45:08.158902Z",
+     "shell.execute_reply.started": "2022-07-08T23:45:08.053705Z"
+    }
+   },
    "outputs": [],
    "source": [
     "n_predictions_expected = len(boot_df) * len([x for x in pc.models if x is not None])\n",
@@ -281,7 +347,16 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "5728896f-1b6d-4c01-85b1-59eff469e05e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-08T23:45:08.163028Z",
+     "iopub.status.busy": "2022-07-08T23:45:08.162894Z",
+     "iopub.status.idle": "2022-07-08T23:45:08.257075Z",
+     "shell.execute_reply": "2022-07-08T23:45:08.256377Z",
+     "shell.execute_reply.started": "2022-07-08T23:45:08.163010Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "preds_df = pc.prob_escape(boot_df).sort_values([\"aa_substitutions\", \"concentration\"])\n",
