--- a/notebooks/RBD_average.ipynb
+++ b/notebooks/RBD_average.ipynb
@@ -92,9 +92,10 @@
     "for (library, replicate), data in data_by_replicate.items():\n",
     "    model = polyclonal.Polyclonal(data_to_fit=data, n_epitopes=3)\n",
     "    models_by_replicate[(library, replicate)] = model\n",
-    "    \n",
+    "\n",
     "_ = polyclonal.polyclonal_collection.fit_models(\n",
-    "    models_by_replicate.values(), n_threads=2,\n",
+    "    models_by_replicate.values(),\n",
+    "    n_threads=2,\n",
     ")"
    ]
   },
