new `PolyclonalBootstrap` in examples/tests

--- a/notebooks/RBD_average.ipynb
+++ b/notebooks/RBD_average.ipynb
@@ -29,11 +29,11 @@
    "id": "8b085a97-b5d8-43dd-a904-e10bb5d5e7be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T14:10:19.951239Z",
-     "iopub.status.busy": "2022-07-15T14:10:19.950776Z",
-     "iopub.status.idle": "2022-07-15T14:10:27.824235Z",
-     "shell.execute_reply": "2022-07-15T14:10:27.823551Z",
-     "shell.execute_reply.started": "2022-07-15T14:10:19.951031Z"
+     "iopub.execute_input": "2022-07-16T14:10:01.780979Z",
+     "iopub.status.busy": "2022-07-16T14:10:01.780691Z",
+     "iopub.status.idle": "2022-07-16T14:10:04.453126Z",
+     "shell.execute_reply": "2022-07-16T14:10:04.452297Z",
+     "shell.execute_reply.started": "2022-07-16T14:10:01.780903Z"
     },
     "tags": []
    },
@@ -50,7 +50,7 @@
     "\n",
     "# split by library and replicates\n",
     "libraries = [\"avg3muts\", \"avg4muts\"]  # the two libraries to use\n",
-    "concentrations = [0.25, 1, 4]  # use these concentrations\n",
+    "concentrations = [1, 4]  # use juste these two concentrations\n",
     "n_replicates = 2  # number of replicates per library\n",
     "\n",
     "data_by_replicate = {\n",
@@ -69,7 +69,8 @@
    "metadata": {},
    "source": [
     "## Fit models to each replicate\n",
-    "We now fit a `Polyclonal` model to each replicate using 3 epitopes:"
+    "We now fit a `Polyclonal` model to each replicate using 3 epitopes.\n",
+    "We arrange the models in a data frame:"
    ]
   },
   {
@@ -78,23 +79,30 @@
    "id": "210eda7c-de7f-4442-8c1c-b364656a2259",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T14:10:27.825460Z",
-     "iopub.status.busy": "2022-07-15T14:10:27.825314Z",
-     "iopub.status.idle": "2022-07-15T14:20:36.313800Z",
-     "shell.execute_reply": "2022-07-15T14:20:36.312275Z",
-     "shell.execute_reply.started": "2022-07-15T14:10:27.825442Z"
+     "iopub.execute_input": "2022-07-16T14:10:04.457259Z",
+     "iopub.status.busy": "2022-07-16T14:10:04.457024Z",
+     "iopub.status.idle": "2022-07-16T14:13:17.218471Z",
+     "shell.execute_reply": "2022-07-16T14:13:17.217184Z",
+     "shell.execute_reply.started": "2022-07-16T14:10:04.457238Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
+    "# first create a data frame with all the models\n",
     "models_by_replicate = {}\n",
     "for (library, replicate), data in data_by_replicate.items():\n",
     "    model = polyclonal.Polyclonal(data_to_fit=data, n_epitopes=3)\n",
     "    models_by_replicate[(library, replicate)] = model\n",
+    "models_df = (\n",
+    "    pd.Series(models_by_replicate, name=\"model\")\n",
+    "    .rename_axis([\"library\", \"replicate\"])\n",
+    "    .reset_index()\n",
+    ")\n",
     "\n",
-    "_ = polyclonal.polyclonal_collection.fit_models(\n",
-    "    models_by_replicate.values(),\n",
+    "# now fit the models\n",
+    "n_fit, n_failed, models_df[\"model\"] = polyclonal.polyclonal_collection.fit_models(\n",
+    "    models_df[\"model\"],\n",
     "    n_threads=2,\n",
     ")"
    ]
@@ -104,7 +112,7 @@
    "id": "31049cc0-0b3d-440b-a3f9-0f627a9fb3ba",
    "metadata": {},
    "source": [
-    "Now make a data frame with each model and other information describing it:"
+    "Note how the models are arranged in a data frame:"
    ]
   },
   {
@@ -113,21 +121,86 @@
    "id": "72c38e26-fb9d-4b2d-b646-a191571aac43",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T14:20:36.317485Z",
-     "iopub.status.busy": "2022-07-15T14:20:36.317095Z",
-     "iopub.status.idle": "2022-07-15T14:20:36.330460Z",
-     "shell.execute_reply": "2022-07-15T14:20:36.329672Z",
-     "shell.execute_reply.started": "2022-07-15T14:20:36.317432Z"
+     "iopub.execute_input": "2022-07-16T14:13:17.230577Z",
+     "iopub.status.busy": "2022-07-16T14:13:17.229891Z",
+     "iopub.status.idle": "2022-07-16T14:13:17.254496Z",
+     "shell.execute_reply": "2022-07-16T14:13:17.253688Z",
+     "shell.execute_reply.started": "2022-07-16T14:13:17.230510Z"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>library</th>\n",
+       "      <th>replicate</th>\n",
+       "      <th>model</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>avg3muts</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt;polyclonal.polyclonal.Polyclonal object at 0x...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>avg3muts</td>\n",
+       "      <td>2</td>\n",
+       "      <td>&lt;polyclonal.polyclonal.Polyclonal object at 0x...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>avg4muts</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt;polyclonal.polyclonal.Polyclonal object at 0x...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>avg4muts</td>\n",
+       "      <td>2</td>\n",
+       "      <td>&lt;polyclonal.polyclonal.Polyclonal object at 0x...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    library  replicate                                              model\n",
+       "0  avg3muts          1  <polyclonal.polyclonal.Polyclonal object at 0x...\n",
+       "1  avg3muts          2  <polyclonal.polyclonal.Polyclonal object at 0x...\n",
+       "2  avg4muts          1  <polyclonal.polyclonal.Polyclonal object at 0x...\n",
+       "3  avg4muts          2  <polyclonal.polyclonal.Polyclonal object at 0x..."
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "models_df = (\n",
-    "    pd.Series(models_by_replicate, name=\"model\")\n",
-    "    .rename_axis([\"library\", \"replicate\"])\n",
-    "    .reset_index()\n",
-    ")"
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "models_df"
    ]
   },
   {
@@ -135,16 +208,9 @@
    "id": "ad5b4dcc-f7ae-48b3-a6ca-08ee2bbf09c0",
    "metadata": {},
    "source": [
-    "## Average the models"
+    "## Average the models\n",
+    "**Still need to write this section after implement `PolyclonalAverage`**"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "914f0019-ea5c-4b72-b695-c97796de7982",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
