--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -191,11 +191,11 @@
    "metadata": {},
    "source": [
     "## Bootstrapping\n",
-    "For the bootstrapping implemented by `PolyclonalCollection`, we start with a single pre-fit model to all the data.\n",
-    "We then draw bootstrap replicates of the data used to fit that model, by default sampling the same variants at each concentration (see `sample_by` option of `PolyclonalCollection`).\n",
+    "For the bootstrapping implemented by `PolyclonalBootstrap`, we start with a single pre-fit model to all the data.\n",
+    "We then draw bootstrap replicates of the data used to fit that model, by default sampling the same variants at each concentration (see `sample_by` option of `PolyclonalBootstrap`).\n",
     "We then fit each of these bootstrapped models starting from the initial values from the pre-fit model on all of the data.\n",
     "Finally, the fit parameters or predictions from the models are summarized.\n",
-    "Note that mutations may not be present in some bootstrap replicates if they are only in a few variants, and this can be assessed by looking at the `frac_boostrap_replicates` column in the output from `PolyclonalCollection`."
+    "Note that mutations may not be present in some bootstrap replicates if they are only in a few variants, and this can be assessed by looking at the `frac_boostrap_replicates` column in the output from `PolyclonalBootstrap`."
    ]
   },
   {
