--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -22,17 +22,18 @@
    "id": "7f2bd96d-b693-4a82-856c-edf6a85ec89a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-08T23:45:04.619019Z",
-     "iopub.status.busy": "2022-07-08T23:45:04.618636Z",
-     "iopub.status.idle": "2022-07-08T23:45:06.190821Z",
-     "shell.execute_reply": "2022-07-08T23:45:06.189451Z",
-     "shell.execute_reply.started": "2022-07-08T23:45:04.618916Z"
-    }
+     "iopub.execute_input": "2022-07-16T13:47:27.692795Z",
+     "iopub.status.busy": "2022-07-16T13:47:27.692399Z",
+     "iopub.status.idle": "2022-07-16T13:47:29.162472Z",
+     "shell.execute_reply": "2022-07-16T13:47:29.161291Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:27.692693Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from polyclonal import Polyclonal, PolyclonalCollection\n",
+    "from polyclonal import Polyclonal, PolyclonalBootstrap\n",
     "import polyclonal.polyclonal_collection\n",
     "import polyclonal.plot\n",
     "import numpy as np"
@@ -55,12 +56,13 @@
    "id": "a212ce8e-b374-4cbb-9bd1-e6543972b4e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-08T23:45:06.196439Z",
-     "iopub.status.busy": "2022-07-08T23:45:06.195880Z",
-     "iopub.status.idle": "2022-07-08T23:45:06.419878Z",
-     "shell.execute_reply": "2022-07-08T23:45:06.418996Z",
-     "shell.execute_reply.started": "2022-07-08T23:45:06.196394Z"
-    }
+     "iopub.execute_input": "2022-07-16T13:47:29.166631Z",
+     "iopub.status.busy": "2022-07-16T13:47:29.166447Z",
+     "iopub.status.idle": "2022-07-16T13:47:29.361223Z",
+     "shell.execute_reply": "2022-07-16T13:47:29.360458Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:29.166607Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -136,12 +138,13 @@
    "id": "a92c97a0-6447-4655-bdd6-49301f98f11b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-08T23:45:06.427103Z",
-     "iopub.status.busy": "2022-07-08T23:45:06.426686Z",
-     "iopub.status.idle": "2022-07-08T23:45:06.450128Z",
-     "shell.execute_reply": "2022-07-08T23:45:06.449310Z",
-     "shell.execute_reply.started": "2022-07-08T23:45:06.427070Z"
-    }
+     "iopub.execute_input": "2022-07-16T13:47:29.365725Z",
+     "iopub.status.busy": "2022-07-16T13:47:29.365358Z",
+     "iopub.status.idle": "2022-07-16T13:47:29.385612Z",
+     "shell.execute_reply": "2022-07-16T13:47:29.384821Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:29.365700Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -162,7 +165,7 @@
    "id": "36684a04-2190-444d-94d2-7c3ce0296591",
    "metadata": {},
    "source": [
-    "## Test initialization of `PolyclonalCollection` objects"
+    "## Test initialization of `PolyclonalBootstrap` objects"
    ]
   },
   {
@@ -171,11 +174,11 @@
    "id": "04a1937a-9241-4f24-91c5-b5513e042002",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-08T23:45:06.453281Z",
-     "iopub.status.busy": "2022-07-08T23:45:06.453128Z",
-     "iopub.status.idle": "2022-07-08T23:45:06.657253Z",
-     "shell.execute_reply": "2022-07-08T23:45:06.656296Z",
-     "shell.execute_reply.started": "2022-07-08T23:45:06.453261Z"
+     "iopub.execute_input": "2022-07-16T13:47:29.388541Z",
+     "iopub.status.busy": "2022-07-16T13:47:29.388395Z",
+     "iopub.status.idle": "2022-07-16T13:47:29.534871Z",
+     "shell.execute_reply": "2022-07-16T13:47:29.533603Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:29.388522Z"
     },
     "tags": []
    },
@@ -183,7 +186,7 @@
    "source": [
     "n_samps = 5\n",
     "n_threads = 4\n",
-    "pc = PolyclonalCollection(\n",
+    "pc = PolyclonalBootstrap(\n",
     "    root_polyclonal=polyclonal_data,\n",
     "    n_bootstrap_samples=n_samps,\n",
     "    n_threads=n_threads,\n",
@@ -213,18 +216,18 @@
    "id": "3ce1356d-9c5d-4b83-85d1-c2c2cdd0b8fb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-08T23:45:06.661107Z",
-     "iopub.status.busy": "2022-07-08T23:45:06.660839Z",
-     "iopub.status.idle": "2022-07-08T23:45:06.796853Z",
-     "shell.execute_reply": "2022-07-08T23:45:06.795947Z",
-     "shell.execute_reply.started": "2022-07-08T23:45:06.661078Z"
+     "iopub.execute_input": "2022-07-16T13:47:29.540109Z",
+     "iopub.status.busy": "2022-07-16T13:47:29.539762Z",
+     "iopub.status.idle": "2022-07-16T13:47:29.667410Z",
+     "shell.execute_reply": "2022-07-16T13:47:29.666425Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:29.540064Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
     "# Do two different seeds generate different objects?\n",
-    "pc2 = PolyclonalCollection(\n",
+    "pc2 = PolyclonalBootstrap(\n",
     "    root_polyclonal=polyclonal_data,\n",
     "    n_bootstrap_samples=n_samps,\n",
     "    n_threads=n_threads,\n",
@@ -238,17 +241,18 @@
    "id": "781ad89f-9e61-4708-81d8-91fc89f2ed25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-08T23:45:06.800768Z",
-     "iopub.status.busy": "2022-07-08T23:45:06.800511Z",
-     "iopub.status.idle": "2022-07-08T23:45:06.932482Z",
-     "shell.execute_reply": "2022-07-08T23:45:06.931402Z",
-     "shell.execute_reply.started": "2022-07-08T23:45:06.800740Z"
-    }
+     "iopub.execute_input": "2022-07-16T13:47:29.671604Z",
+     "iopub.status.busy": "2022-07-16T13:47:29.671325Z",
+     "iopub.status.idle": "2022-07-16T13:47:29.800103Z",
+     "shell.execute_reply": "2022-07-16T13:47:29.798918Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:29.671567Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
     "# What if we use the same seed with multiple threads?\n",
-    "pc_copy = PolyclonalCollection(\n",
+    "pc_copy = PolyclonalBootstrap(\n",
     "    root_polyclonal=polyclonal_data,\n",
     "    n_bootstrap_samples=n_samps,\n",
     "    n_threads=n_threads,\n",
@@ -270,12 +274,13 @@
    "id": "c6185dc5-6d1a-4975-92b2-5cd7fd6c6b58",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-08T23:45:06.938032Z",
-     "iopub.status.busy": "2022-07-08T23:45:06.937651Z",
-     "iopub.status.idle": "2022-07-08T23:45:07.382243Z",
-     "shell.execute_reply": "2022-07-08T23:45:07.381358Z",
-     "shell.execute_reply.started": "2022-07-08T23:45:06.937987Z"
-    }
+     "iopub.execute_input": "2022-07-16T13:47:29.806195Z",
+     "iopub.status.busy": "2022-07-16T13:47:29.805836Z",
+     "iopub.status.idle": "2022-07-16T13:47:30.248225Z",
+     "shell.execute_reply": "2022-07-16T13:47:30.246722Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:29.806150Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -289,12 +294,13 @@
    "id": "191a9185-f1d3-4271-8116-fd0a47b788ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-08T23:45:07.386081Z",
-     "iopub.status.busy": "2022-07-08T23:45:07.385789Z",
-     "iopub.status.idle": "2022-07-08T23:45:08.048135Z",
-     "shell.execute_reply": "2022-07-08T23:45:08.046709Z",
-     "shell.execute_reply.started": "2022-07-08T23:45:07.386050Z"
-    }
+     "iopub.execute_input": "2022-07-16T13:47:30.253833Z",
+     "iopub.status.busy": "2022-07-16T13:47:30.253341Z",
+     "iopub.status.idle": "2022-07-16T13:47:30.860837Z",
+     "shell.execute_reply": "2022-07-16T13:47:30.860108Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:30.253782Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -327,12 +333,13 @@
    "id": "1b73d334-a4f0-4dc6-b636-6c179930dd74",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-08T23:45:08.053740Z",
-     "iopub.status.busy": "2022-07-08T23:45:08.053319Z",
-     "iopub.status.idle": "2022-07-08T23:45:08.159759Z",
-     "shell.execute_reply": "2022-07-08T23:45:08.158902Z",
-     "shell.execute_reply.started": "2022-07-08T23:45:08.053705Z"
-    }
+     "iopub.execute_input": "2022-07-16T13:47:30.862475Z",
+     "iopub.status.busy": "2022-07-16T13:47:30.862111Z",
+     "iopub.status.idle": "2022-07-16T13:47:30.965969Z",
+     "shell.execute_reply": "2022-07-16T13:47:30.964752Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:30.862448Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -349,11 +356,11 @@
    "id": "5728896f-1b6d-4c01-85b1-59eff469e05e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-08T23:45:08.163028Z",
-     "iopub.status.busy": "2022-07-08T23:45:08.162894Z",
-     "iopub.status.idle": "2022-07-08T23:45:08.257075Z",
-     "shell.execute_reply": "2022-07-08T23:45:08.256377Z",
-     "shell.execute_reply.started": "2022-07-08T23:45:08.163010Z"
+     "iopub.execute_input": "2022-07-16T13:47:30.967847Z",
+     "iopub.status.busy": "2022-07-16T13:47:30.967574Z",
+     "iopub.status.idle": "2022-07-16T13:47:31.054163Z",
+     "shell.execute_reply": "2022-07-16T13:47:31.053372Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:30.967736Z"
     },
     "tags": []
    },
