update notebook to use new `PolyclonalBootstrap`

--- a/notebooks/real_REGN10933_mAb.ipynb
+++ b/notebooks/real_REGN10933_mAb.ipynb
@@ -668,7 +668,7 @@
     "# but here we just fit 20 to make things faster.\n",
     "n_bootstrap_samples = 20\n",
     "\n",
-    "bootstrap_model = polyclonal.PolyclonalCollection(\n",
+    "bootstrap_model = polyclonal.PolyclonalBootstrap(\n",
     "    root_polyclonal=model,\n",
     "    n_bootstrap_samples=n_bootstrap_samples,\n",
     "    n_threads=2,  # specify number as here, otherwise uses all available\n",
