--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -20,12 +20,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "7f2bd96d-b693-4a82-856c-edf6a85ec89a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-16T13:47:27.692795Z",
+     "iopub.status.busy": "2022-07-16T13:47:27.692399Z",
+     "iopub.status.idle": "2022-07-16T13:47:29.162472Z",
+     "shell.execute_reply": "2022-07-16T13:47:29.161291Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:27.692693Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from polyclonal import Polyclonal, PolyclonalCollection\n",
-    "import polyclonal.polyclonal_collection as boot\n",
+    "from polyclonal import Polyclonal, PolyclonalBootstrap\n",
+    "import polyclonal.polyclonal_collection\n",
     "import polyclonal.plot\n",
     "import numpy as np"
    ]
@@ -45,7 +54,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "a212ce8e-b374-4cbb-9bd1-e6543972b4e6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-16T13:47:29.166631Z",
+     "iopub.status.busy": "2022-07-16T13:47:29.166447Z",
+     "iopub.status.idle": "2022-07-16T13:47:29.361223Z",
+     "shell.execute_reply": "2022-07-16T13:47:29.360458Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:29.166607Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "activity_wt_df = pd.DataFrame({\"epitope\": [\"1\", \"2\"], \"activity\": [2.0, 1.0]})\n",
@@ -118,10 +136,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "a92c97a0-6447-4655-bdd6-49301f98f11b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-16T13:47:29.365725Z",
+     "iopub.status.busy": "2022-07-16T13:47:29.365358Z",
+     "iopub.status.idle": "2022-07-16T13:47:29.385612Z",
+     "shell.execute_reply": "2022-07-16T13:47:29.384821Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:29.365700Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "boot_df = boot.create_bootstrap_sample(data_to_fit)\n",
+    "boot_df = polyclonal.polyclonal_collection.create_bootstrap_sample(data_to_fit)\n",
     "\n",
     "# Make sure we got an appropriate number of samples\n",
     "assert len(boot_df) == len(data_to_fit)\n",
@@ -138,7 +165,7 @@
    "id": "36684a04-2190-444d-94d2-7c3ce0296591",
    "metadata": {},
    "source": [
-    "## Test initialization of `PolyclonalCollection` objects"
+    "## Test initialization of `PolyclonalBootstrap` objects"
    ]
   },
   {
@@ -146,13 +173,20 @@
    "execution_count": 4,
    "id": "04a1937a-9241-4f24-91c5-b5513e042002",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-16T13:47:29.388541Z",
+     "iopub.status.busy": "2022-07-16T13:47:29.388395Z",
+     "iopub.status.idle": "2022-07-16T13:47:29.534871Z",
+     "shell.execute_reply": "2022-07-16T13:47:29.533603Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:29.388522Z"
+    },
     "tags": []
    },
    "outputs": [],
    "source": [
     "n_samps = 5\n",
     "n_threads = 4\n",
-    "pc = PolyclonalCollection(\n",
+    "pc = PolyclonalBootstrap(\n",
     "    root_polyclonal=polyclonal_data,\n",
     "    n_bootstrap_samples=n_samps,\n",
     "    n_threads=n_threads,\n",
@@ -181,12 +215,19 @@
    "execution_count": 5,
    "id": "3ce1356d-9c5d-4b83-85d1-c2c2cdd0b8fb",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-16T13:47:29.540109Z",
+     "iopub.status.busy": "2022-07-16T13:47:29.539762Z",
+     "iopub.status.idle": "2022-07-16T13:47:29.667410Z",
+     "shell.execute_reply": "2022-07-16T13:47:29.666425Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:29.540064Z"
+    },
     "tags": []
    },
    "outputs": [],
    "source": [
     "# Do two different seeds generate different objects?\n",
-    "pc2 = PolyclonalCollection(\n",
+    "pc2 = PolyclonalBootstrap(\n",
     "    root_polyclonal=polyclonal_data,\n",
     "    n_bootstrap_samples=n_samps,\n",
     "    n_threads=n_threads,\n",
@@ -198,11 +239,20 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "781ad89f-9e61-4708-81d8-91fc89f2ed25",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-16T13:47:29.671604Z",
+     "iopub.status.busy": "2022-07-16T13:47:29.671325Z",
+     "iopub.status.idle": "2022-07-16T13:47:29.800103Z",
+     "shell.execute_reply": "2022-07-16T13:47:29.798918Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:29.671567Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# What if we use the same seed with multiple threads?\n",
-    "pc_copy = PolyclonalCollection(\n",
+    "pc_copy = PolyclonalBootstrap(\n",
     "    root_polyclonal=polyclonal_data,\n",
     "    n_bootstrap_samples=n_samps,\n",
     "    n_threads=n_threads,\n",
@@ -222,22 +272,36 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "c6185dc5-6d1a-4975-92b2-5cd7fd6c6b58",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-16T13:47:29.806195Z",
+     "iopub.status.busy": "2022-07-16T13:47:29.805836Z",
+     "iopub.status.idle": "2022-07-16T13:47:30.248225Z",
+     "shell.execute_reply": "2022-07-16T13:47:30.246722Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:29.806150Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Test to ensure that parameters change during fitting.\n",
-    "for model in pc.models:\n",
-    "    old_params = model._params\n",
-    "    boot._fit_polyclonal_model_static(model, fit_site_level_first=False)\n",
-    "    # Did the params change?\n",
-    "    assert not np.array_equal(model._params, old_params)"
+    "n_fit, n_failed, _ = polyclonal.polyclonal_collection.fit_models(pc.models, n_threads=2)\n",
+    "assert n_fit == 5 and n_failed == 0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "id": "191a9185-f1d3-4271-8116-fd0a47b788ba",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-16T13:47:30.253833Z",
+     "iopub.status.busy": "2022-07-16T13:47:30.253341Z",
+     "iopub.status.idle": "2022-07-16T13:47:30.860837Z",
+     "shell.execute_reply": "2022-07-16T13:47:30.860108Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:30.253782Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -267,7 +331,16 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "1b73d334-a4f0-4dc6-b636-6c179930dd74",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-16T13:47:30.862475Z",
+     "iopub.status.busy": "2022-07-16T13:47:30.862111Z",
+     "iopub.status.idle": "2022-07-16T13:47:30.965969Z",
+     "shell.execute_reply": "2022-07-16T13:47:30.964752Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:30.862448Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "n_predictions_expected = len(boot_df) * len([x for x in pc.models if x is not None])\n",
@@ -281,7 +354,16 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "5728896f-1b6d-4c01-85b1-59eff469e05e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-16T13:47:30.967847Z",
+     "iopub.status.busy": "2022-07-16T13:47:30.967574Z",
+     "iopub.status.idle": "2022-07-16T13:47:31.054163Z",
+     "shell.execute_reply": "2022-07-16T13:47:31.053372Z",
+     "shell.execute_reply.started": "2022-07-16T13:47:30.967736Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "preds_df = pc.prob_escape(boot_df).sort_values([\"aa_substitutions\", \"concentration\"])\n",
