add `tidy_to_corr` and use it for epitope correlations
Added a general function for data frame correlations, and use it for the `Polyclonal` epitope harmonizatio correlations.

--- a/tests/test_epitope_harmony.ipynb
+++ b/tests/test_epitope_harmony.ipynb
@@ -22,11 +22,11 @@
    "id": "5935c6e6-a5ae-4d73-8f80-03c7d36775f0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-17T14:05:34.703263Z",
-     "iopub.status.busy": "2022-07-17T14:05:34.702757Z",
-     "iopub.status.idle": "2022-07-17T14:05:36.115386Z",
-     "shell.execute_reply": "2022-07-17T14:05:36.114634Z",
-     "shell.execute_reply.started": "2022-07-17T14:05:34.703187Z"
+     "iopub.execute_input": "2022-07-17T20:47:20.169916Z",
+     "iopub.status.busy": "2022-07-17T20:47:20.169668Z",
+     "iopub.status.idle": "2022-07-17T20:47:21.542438Z",
+     "shell.execute_reply": "2022-07-17T20:47:21.541796Z",
+     "shell.execute_reply.started": "2022-07-17T20:47:20.169833Z"
     },
     "tags": []
    },
@@ -101,12 +101,13 @@
    "id": "0667e765-d0d7-40fc-b21b-c2da5fedec23",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-17T14:05:36.118810Z",
-     "iopub.status.busy": "2022-07-17T14:05:36.118675Z",
-     "iopub.status.idle": "2022-07-17T14:05:36.210221Z",
-     "shell.execute_reply": "2022-07-17T14:05:36.209746Z",
-     "shell.execute_reply.started": "2022-07-17T14:05:36.118792Z"
-    }
+     "iopub.execute_input": "2022-07-17T20:47:21.545826Z",
+     "iopub.status.busy": "2022-07-17T20:47:21.545691Z",
+     "iopub.status.idle": "2022-07-17T20:47:21.589163Z",
+     "shell.execute_reply": "2022-07-17T20:47:21.588736Z",
+     "shell.execute_reply.started": "2022-07-17T20:47:21.545806Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -187,12 +188,13 @@
    "id": "dc7821f2-8572-4e0f-ab8a-14db2d72fbe7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-17T14:05:36.214384Z",
-     "iopub.status.busy": "2022-07-17T14:05:36.214145Z",
-     "iopub.status.idle": "2022-07-17T14:05:36.291413Z",
-     "shell.execute_reply": "2022-07-17T14:05:36.290843Z",
-     "shell.execute_reply.started": "2022-07-17T14:05:36.214365Z"
-    }
+     "iopub.execute_input": "2022-07-17T20:47:21.593141Z",
+     "iopub.status.busy": "2022-07-17T20:47:21.592901Z",
+     "iopub.status.idle": "2022-07-17T20:47:21.628337Z",
+     "shell.execute_reply": "2022-07-17T20:47:21.627870Z",
+     "shell.execute_reply.started": "2022-07-17T20:47:21.593120Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -273,12 +275,13 @@
    "id": "7cb53b02-4c88-4087-9ff6-cab8b174bf66",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-17T14:05:36.294243Z",
-     "iopub.status.busy": "2022-07-17T14:05:36.294106Z",
-     "iopub.status.idle": "2022-07-17T14:05:36.372072Z",
-     "shell.execute_reply": "2022-07-17T14:05:36.371403Z",
-     "shell.execute_reply.started": "2022-07-17T14:05:36.294226Z"
-    }
+     "iopub.execute_input": "2022-07-17T20:47:21.630673Z",
+     "iopub.status.busy": "2022-07-17T20:47:21.630499Z",
+     "iopub.status.idle": "2022-07-17T20:47:21.665758Z",
+     "shell.execute_reply": "2022-07-17T20:47:21.665293Z",
+     "shell.execute_reply.started": "2022-07-17T20:47:21.630655Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -310,27 +313,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.860309</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-0.860309</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.860309</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.860309</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -338,10 +341,10 @@
       ],
       "text/plain": [
        "  ref_epitope self_epitope  correlation\n",
-       "0           2            1     1.000000\n",
-       "1           2            2    -0.860309\n",
-       "2           1            1    -0.860309\n",
-       "3           1            2     1.000000"
+       "0           1            1    -0.860309\n",
+       "1           1            2     1.000000\n",
+       "2           2            1     1.000000\n",
+       "3           2            2    -0.860309"
       ]
      },
      "execution_count": 4,
@@ -368,11 +371,11 @@
    "id": "b1f728e8-4fa1-4d2b-8c0d-0cd0adaacab3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-17T14:05:36.374893Z",
-     "iopub.status.busy": "2022-07-17T14:05:36.374761Z",
-     "iopub.status.idle": "2022-07-17T14:05:36.483098Z",
-     "shell.execute_reply": "2022-07-17T14:05:36.482274Z",
-     "shell.execute_reply.started": "2022-07-17T14:05:36.374875Z"
+     "iopub.execute_input": "2022-07-17T20:47:21.668300Z",
+     "iopub.status.busy": "2022-07-17T20:47:21.668009Z",
+     "iopub.status.idle": "2022-07-17T20:47:21.741971Z",
+     "shell.execute_reply": "2022-07-17T20:47:21.740961Z",
+     "shell.execute_reply.started": "2022-07-17T20:47:21.668282Z"
     },
     "tags": []
    },
@@ -407,11 +410,11 @@
    "id": "b442f4eb-64db-45c4-b3f7-f82a5e32b043",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-17T14:05:36.486295Z",
-     "iopub.status.busy": "2022-07-17T14:05:36.486047Z",
-     "iopub.status.idle": "2022-07-17T14:05:36.594211Z",
-     "shell.execute_reply": "2022-07-17T14:05:36.593571Z",
-     "shell.execute_reply.started": "2022-07-17T14:05:36.486275Z"
+     "iopub.execute_input": "2022-07-17T20:47:21.745158Z",
+     "iopub.status.busy": "2022-07-17T20:47:21.745016Z",
+     "iopub.status.idle": "2022-07-17T20:47:21.817197Z",
+     "shell.execute_reply": "2022-07-17T20:47:21.816223Z",
+     "shell.execute_reply.started": "2022-07-17T20:47:21.745139Z"
     },
     "tags": []
    },
@@ -446,11 +449,11 @@
    "id": "098ad681-2a96-4e1f-ace0-083fc9b63410",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-17T14:05:36.596889Z",
-     "iopub.status.busy": "2022-07-17T14:05:36.596714Z",
-     "iopub.status.idle": "2022-07-17T14:05:36.710268Z",
-     "shell.execute_reply": "2022-07-17T14:05:36.709547Z",
-     "shell.execute_reply.started": "2022-07-17T14:05:36.596868Z"
+     "iopub.execute_input": "2022-07-17T20:47:21.820812Z",
+     "iopub.status.busy": "2022-07-17T20:47:21.820681Z",
+     "iopub.status.idle": "2022-07-17T20:47:21.883917Z",
+     "shell.execute_reply": "2022-07-17T20:47:21.883339Z",
+     "shell.execute_reply.started": "2022-07-17T20:47:21.820793Z"
     },
     "tags": []
    },
