--- a/tests/test_polyclonalaverage.ipynb
+++ b/tests/test_polyclonalaverage.ipynb
@@ -23,11 +23,11 @@
    "id": "5935c6e6-a5ae-4d73-8f80-03c7d36775f0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-18T13:58:16.602475Z",
-     "iopub.status.busy": "2022-07-18T13:58:16.602203Z",
-     "iopub.status.idle": "2022-07-18T13:58:18.074411Z",
-     "shell.execute_reply": "2022-07-18T13:58:18.073761Z",
-     "shell.execute_reply.started": "2022-07-18T13:58:16.602391Z"
+     "iopub.execute_input": "2022-07-18T14:49:20.881765Z",
+     "iopub.status.busy": "2022-07-18T14:49:20.881275Z",
+     "iopub.status.idle": "2022-07-18T14:49:23.047916Z",
+     "shell.execute_reply": "2022-07-18T14:49:23.047168Z",
+     "shell.execute_reply.started": "2022-07-18T14:49:20.881700Z"
     },
     "tags": []
    },
@@ -188,11 +188,11 @@
    "id": "0667e765-d0d7-40fc-b21b-c2da5fedec23",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-18T13:58:18.077916Z",
-     "iopub.status.busy": "2022-07-18T13:58:18.077670Z",
-     "iopub.status.idle": "2022-07-18T13:58:18.297994Z",
-     "shell.execute_reply": "2022-07-18T13:58:18.297324Z",
-     "shell.execute_reply.started": "2022-07-18T13:58:18.077884Z"
+     "iopub.execute_input": "2022-07-18T14:49:23.051739Z",
+     "iopub.status.busy": "2022-07-18T14:49:23.051475Z",
+     "iopub.status.idle": "2022-07-18T14:49:23.273056Z",
+     "shell.execute_reply": "2022-07-18T14:49:23.272410Z",
+     "shell.execute_reply.started": "2022-07-18T14:49:23.051714Z"
     },
     "tags": []
    },
@@ -215,11 +215,11 @@
    "id": "c6396f53-82f2-4fcf-bd2d-b6f0c03f8d7f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-18T13:58:18.302281Z",
-     "iopub.status.busy": "2022-07-18T13:58:18.302042Z",
-     "iopub.status.idle": "2022-07-18T13:58:18.402968Z",
-     "shell.execute_reply": "2022-07-18T13:58:18.402346Z",
-     "shell.execute_reply.started": "2022-07-18T13:58:18.302260Z"
+     "iopub.execute_input": "2022-07-18T14:49:23.280530Z",
+     "iopub.status.busy": "2022-07-18T14:49:23.280150Z",
+     "iopub.status.idle": "2022-07-18T14:49:23.382066Z",
+     "shell.execute_reply": "2022-07-18T14:49:23.381527Z",
+     "shell.execute_reply.started": "2022-07-18T14:49:23.280489Z"
     },
     "tags": []
    },
@@ -846,11 +846,11 @@
    "id": "fa1cdd44-0748-4a57-b56d-1d0cfc6ba073",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-18T13:58:18.406052Z",
-     "iopub.status.busy": "2022-07-18T13:58:18.405843Z",
-     "iopub.status.idle": "2022-07-18T13:58:18.584789Z",
-     "shell.execute_reply": "2022-07-18T13:58:18.583948Z",
-     "shell.execute_reply.started": "2022-07-18T13:58:18.406031Z"
+     "iopub.execute_input": "2022-07-18T14:49:23.385070Z",
+     "iopub.status.busy": "2022-07-18T14:49:23.384856Z",
+     "iopub.status.idle": "2022-07-18T14:49:23.559325Z",
+     "shell.execute_reply": "2022-07-18T14:49:23.558684Z",
+     "shell.execute_reply.started": "2022-07-18T14:49:23.385048Z"
     },
     "tags": []
    },
@@ -859,13 +859,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-64195762ccb24b239fc260cbc2a7c9fd\"></div>\n",
+       "<div id=\"altair-viz-edb1e5da871e43079553d0516adb7f64\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-64195762ccb24b239fc260cbc2a7c9fd\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-64195762ccb24b239fc260cbc2a7c9fd\");\n",
+       "    if (outputDiv.id !== \"altair-viz-edb1e5da871e43079553d0516adb7f64\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-edb1e5da871e43079553d0516adb7f64\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -943,11 +943,11 @@
    "id": "250f75fb-b87c-4e1b-9034-15483d7c7e8d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-18T13:58:18.589279Z",
-     "iopub.status.busy": "2022-07-18T13:58:18.588936Z",
-     "iopub.status.idle": "2022-07-18T13:58:18.604418Z",
-     "shell.execute_reply": "2022-07-18T13:58:18.603942Z",
-     "shell.execute_reply.started": "2022-07-18T13:58:18.589238Z"
+     "iopub.execute_input": "2022-07-18T14:49:23.562288Z",
+     "iopub.status.busy": "2022-07-18T14:49:23.562087Z",
+     "iopub.status.idle": "2022-07-18T14:49:23.574622Z",
+     "shell.execute_reply": "2022-07-18T14:49:23.574096Z",
+     "shell.execute_reply.started": "2022-07-18T14:49:23.562266Z"
     }
    },
    "outputs": [
@@ -1082,11 +1082,11 @@
    "id": "7ef29b17-be20-4f68-a794-ef6d646898fe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-18T13:58:18.606835Z",
-     "iopub.status.busy": "2022-07-18T13:58:18.606653Z",
-     "iopub.status.idle": "2022-07-18T13:58:18.621996Z",
-     "shell.execute_reply": "2022-07-18T13:58:18.621477Z",
-     "shell.execute_reply.started": "2022-07-18T13:58:18.606816Z"
+     "iopub.execute_input": "2022-07-18T14:49:23.577269Z",
+     "iopub.status.busy": "2022-07-18T14:49:23.577127Z",
+     "iopub.status.idle": "2022-07-18T14:49:23.592989Z",
+     "shell.execute_reply": "2022-07-18T14:49:23.592503Z",
+     "shell.execute_reply.started": "2022-07-18T14:49:23.577250Z"
     }
    },
    "outputs": [
@@ -1154,11 +1154,11 @@
    "id": "2dc2eab2-d846-488d-aa0d-69cc9c0d621f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-18T13:58:18.624762Z",
-     "iopub.status.busy": "2022-07-18T13:58:18.624563Z",
-     "iopub.status.idle": "2022-07-18T13:58:18.718735Z",
-     "shell.execute_reply": "2022-07-18T13:58:18.718175Z",
-     "shell.execute_reply.started": "2022-07-18T13:58:18.624742Z"
+     "iopub.execute_input": "2022-07-18T14:49:23.595460Z",
+     "iopub.status.busy": "2022-07-18T14:49:23.595317Z",
+     "iopub.status.idle": "2022-07-18T14:49:23.688347Z",
+     "shell.execute_reply": "2022-07-18T14:49:23.687766Z",
+     "shell.execute_reply.started": "2022-07-18T14:49:23.595442Z"
     }
    },
    "outputs": [
@@ -1166,13 +1166,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-2c9f3b9c524b430dbf32fa13fafdabc3\"></div>\n",
+       "<div id=\"altair-viz-84be7c0e640445b59513a3768220dca3\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-2c9f3b9c524b430dbf32fa13fafdabc3\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-2c9f3b9c524b430dbf32fa13fafdabc3\");\n",
+       "    if (outputDiv.id !== \"altair-viz-84be7c0e640445b59513a3768220dca3\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-84be7c0e640445b59513a3768220dca3\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -1231,6 +1231,8 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "\n",
     "avg_model.activity_wt_barplot()"
    ]
   },
@@ -1248,11 +1250,11 @@
    "id": "4520c763-f8da-45cc-9987-bcbb2214f85e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-18T13:58:18.721558Z",
-     "iopub.status.busy": "2022-07-18T13:58:18.721367Z",
-     "iopub.status.idle": "2022-07-18T13:58:18.755360Z",
-     "shell.execute_reply": "2022-07-18T13:58:18.754813Z",
-     "shell.execute_reply.started": "2022-07-18T13:58:18.721538Z"
+     "iopub.execute_input": "2022-07-18T14:49:23.691281Z",
+     "iopub.status.busy": "2022-07-18T14:49:23.691047Z",
+     "iopub.status.idle": "2022-07-18T14:49:23.724634Z",
+     "shell.execute_reply": "2022-07-18T14:49:23.724126Z",
+     "shell.execute_reply.started": "2022-07-18T14:49:23.691262Z"
     },
     "tags": []
    },
@@ -1792,11 +1794,11 @@
    "id": "0e88ba97-d25c-4d5a-a6f2-469bd90d39d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-18T13:58:18.758063Z",
-     "iopub.status.busy": "2022-07-18T13:58:18.757876Z",
-     "iopub.status.idle": "2022-07-18T13:58:18.815370Z",
-     "shell.execute_reply": "2022-07-18T13:58:18.814729Z",
-     "shell.execute_reply.started": "2022-07-18T13:58:18.758043Z"
+     "iopub.execute_input": "2022-07-18T14:49:23.725529Z",
+     "iopub.status.busy": "2022-07-18T14:49:23.725300Z",
+     "iopub.status.idle": "2022-07-18T14:49:23.783922Z",
+     "shell.execute_reply": "2022-07-18T14:49:23.783349Z",
+     "shell.execute_reply.started": "2022-07-18T14:49:23.725510Z"
     }
    },
    "outputs": [
@@ -1998,11 +2000,11 @@
    "id": "52b6b660-a2fc-461d-bf2f-d4aebb624314",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-18T13:58:18.816414Z",
-     "iopub.status.busy": "2022-07-18T13:58:18.816171Z",
-     "iopub.status.idle": "2022-07-18T13:58:19.217545Z",
-     "shell.execute_reply": "2022-07-18T13:58:19.216990Z",
-     "shell.execute_reply.started": "2022-07-18T13:58:18.816395Z"
+     "iopub.execute_input": "2022-07-18T14:49:23.784962Z",
+     "iopub.status.busy": "2022-07-18T14:49:23.784666Z",
+     "iopub.status.idle": "2022-07-18T14:49:24.223357Z",
+     "shell.execute_reply": "2022-07-18T14:49:24.222598Z",
+     "shell.execute_reply.started": "2022-07-18T14:49:23.784941Z"
     }
    },
    "outputs": [
@@ -2010,13 +2012,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-4bbfd77afa104770b33f92169614cb5e\"></div>\n",
+       "<div id=\"altair-viz-6fc454ef093443b28b9a42f400675508\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-4bbfd77afa104770b33f92169614cb5e\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-4bbfd77afa104770b33f92169614cb5e\");\n",
+       "    if (outputDiv.id !== \"altair-viz-6fc454ef093443b28b9a42f400675508\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-6fc454ef093443b28b9a42f400675508\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -2094,11 +2096,11 @@
    "id": "957a1c96-80e2-4880-8c34-0a31eb8166a7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-18T13:58:19.218577Z",
-     "iopub.status.busy": "2022-07-18T13:58:19.218337Z",
-     "iopub.status.idle": "2022-07-18T13:58:19.300032Z",
-     "shell.execute_reply": "2022-07-18T13:58:19.299487Z",
-     "shell.execute_reply.started": "2022-07-18T13:58:19.218558Z"
+     "iopub.execute_input": "2022-07-18T14:49:24.224853Z",
+     "iopub.status.busy": "2022-07-18T14:49:24.224535Z",
+     "iopub.status.idle": "2022-07-18T14:49:24.309448Z",
+     "shell.execute_reply": "2022-07-18T14:49:24.308907Z",
+     "shell.execute_reply.started": "2022-07-18T14:49:24.224830Z"
     },
     "tags": []
    },
@@ -2547,11 +2549,11 @@
    "id": "a8ba5f75-a935-4342-a867-931691e54e47",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-18T13:58:19.301070Z",
-     "iopub.status.busy": "2022-07-18T13:58:19.300814Z",
-     "iopub.status.idle": "2022-07-18T13:58:19.393528Z",
-     "shell.execute_reply": "2022-07-18T13:58:19.392988Z",
-     "shell.execute_reply.started": "2022-07-18T13:58:19.301051Z"
+     "iopub.execute_input": "2022-07-18T14:49:24.310321Z",
+     "iopub.status.busy": "2022-07-18T14:49:24.310177Z",
+     "iopub.status.idle": "2022-07-18T14:49:24.405725Z",
+     "shell.execute_reply": "2022-07-18T14:49:24.405200Z",
+     "shell.execute_reply.started": "2022-07-18T14:49:24.310304Z"
     }
    },
    "outputs": [
@@ -3033,25 +3035,26 @@
    "id": "688be46d-8d22-45b8-9f4a-3c3df3bc2f05",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-18T13:58:19.394562Z",
-     "iopub.status.busy": "2022-07-18T13:58:19.394298Z",
-     "iopub.status.idle": "2022-07-18T13:58:19.938420Z",
-     "shell.execute_reply": "2022-07-18T13:58:19.937945Z",
-     "shell.execute_reply.started": "2022-07-18T13:58:19.394543Z"
-    }
+     "iopub.execute_input": "2022-07-18T14:49:24.406730Z",
+     "iopub.status.busy": "2022-07-18T14:49:24.406492Z",
+     "iopub.status.idle": "2022-07-18T14:49:24.956334Z",
+     "shell.execute_reply": "2022-07-18T14:49:24.955784Z",
+     "shell.execute_reply.started": "2022-07-18T14:49:24.406711Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-73aee59f0f6046c0a51185304d2ce47a\"></div>\n",
+       "<div id=\"altair-viz-e6f48ce9c2b74f30a299c6b18ad950ea\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-73aee59f0f6046c0a51185304d2ce47a\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-73aee59f0f6046c0a51185304d2ce47a\");\n",
+       "    if (outputDiv.id !== \"altair-viz-e6f48ce9c2b74f30a299c6b18ad950ea\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-e6f48ce9c2b74f30a299c6b18ad950ea\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -3110,6 +3113,8 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "\n",
     "avg_model.mut_escape_lineplot()"
    ]
   }
